02/19/2018_A7_Stying Added custom background, fontFamily, and color.

--- a/app/src/main/res/layout/activity_a6__adding_seek_bar.xml
+++ b/app/src/main/res/layout/activity_a6__adding_seek_bar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/myphonebg"
     tools:context="com.example.piano.itc162_a6_addingseekbar.A6_AddingSeekBar"
     tools:layout_editor_absoluteY="73dp">
 
@@ -12,10 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/itc_162_assignment_6_adding_seekbar"
+        android:fontFamily="cursive"
+        android:text="@string/assignment_name"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="12sp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,11 +30,12 @@
         android:id="@+id/appLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="cursive"
         android:text="@string/tempconverterapp"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -79,13 +82,14 @@
     <EditText
         android:id="@+id/inputNumber"
         android:layout_width="183dp"
-        android:layout_height="43dp"
+        android:layout_height="31dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
+        android:background="@android:color/white"
         android:hint="@string/enter_a_number"
         android:inputType="numberDecimal"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@android:color/holo_green_dark"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/displyResult"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -117,6 +121,7 @@
         android:text="@string/clear"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:fontFamily="cursive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
@@ -128,7 +133,7 @@
         android:id="@+id/seekBar"
         android:layout_width="311dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/inputNumber"
         app:layout_constraintEnd_toEndOf="parent"
