02/19/2018_A7_Stying 2 styled seekbar

--- a/app/src/main/res/layout/activity_a6__adding_seek_bar.xml
+++ b/app/src/main/res/layout/activity_a6__adding_seek_bar.xml
@@ -131,6 +131,7 @@
 
     <SeekBar
         android:id="@+id/seekBar"
+        style="@android:style/Widget.SeekBar"
         android:layout_width="311dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
